working for the loss, all seems to be working but still feel like it needs to be tidied up a bunch

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+body {
+    background: url(../images/crystal-cave.png) center no-repeat;
+    background-size: cover;
+}
+
 .crystals img {
     max-width: 150px;
 }
