--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,21 @@ body {
     margin: 0;
 }
 
+footer {
+    margin-top: auto 0 0;
+    text-align: center;
+}
+
+footer p {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+    margin: 5px;
+    font-size: .7em;
+    color: #a3708e;
+    font-weight: 600;
+    letter-spacing: .06em;
+}
+
 .target-box h3,
 h1 {
     margin: 0;
